# API-Transit

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.arm64  docker-compose.yml
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs  mock.rs  state.rs
src/api/: auth_api.rs  mod.rs  proxy.rs  routes_api.rs  stats_api.rs  token_api.rs  upstream_api.rs
src/db/: mod.rs
src/db/entities/: api_tokens.rs  health_records.rs  mod.rs  request_logs.rs  route_rules.rs  upstreams.rs
src/db/migrations/: migration_000001_create_upstreams.rs  migration_000002_create_api_tokens.rs  migration_000003_create_route_rules.rs  migration_000004_create_request_logs.rs  migration_000005_create_health_records.rs  migration_000006_add_upstream_ids.rs  mod.rs
src/health/: scheduler.rs
src/middleware/: auth.rs
src/proxy/: forward.rs  mod.rs  rewrite.rs
src/service/: mod.rs  route_rule.rs  stats.rs  token.rs  upstream.rs
